--- a/Vid-ODE/requirements.txt
+++ b/Vid-ODE/requirements.txt
@@ -1,13 +1,13 @@
 easydict==1.9
 ipython==7.8.0
 matplotlib==3.1.1
-numpy==1.16.1
-opencv-python==4.1.1.26
+numpy==1.16.4
+opencv-python==4.5.1.48
 Pillow==6.1.0
 scikit-image==0.17.2
 scikit-learn==0.22.1
-scipy==1.3.1
-torch==1.0.0
+torch==1.4.0
 torchdiffeq==0.0.1
-torchvision==0.2.2
+torchvision==0.5.0
 tqdm==4.19.9
+phyre==0.2.2
