--- a/configs.yaml
+++ b/configs.yaml
@@ -3,9 +3,8 @@ defaults:
   dataset: "mmnist"
   model: "ConvGRU"      # Supports "ConvGRU", "ODEConv"
   phase: "train"
-  epochs: 100
+  epochs: 25
   batch_size: 4
-  valid_batches: 5      # validate on x batches during training
   load_model: False
   train_test_split: 0.8
   total_frames: 2000000   # 2M frames as in CW-VAE paper
@@ -21,9 +20,7 @@ defaults:
   
   # Save & logs frequencies
   ckpt_save_freq: 5000            # Save model params every x steps
-  validate_freq: 2000             # Validate every x steps
   log_video_freq: 2000            # log video every x steps
-  log_freq: 1                     # log every x epochs
   test_log_freq: 50               # log test loss every x steps
 
   # Image sequence details
@@ -39,6 +36,12 @@ defaults:
 
   lr: 1e-3
   n_downs: 2
+  decode_diff_method: 'dopri5'          # choices=['dopri5', 'euler', 'adams', 'rk4']
+  frozen: True
+
+  wandb_project: 'ODE-RL'
+  wandb_entity: 'jithendaraa'
+  offline: True                         # Beluga does not have internet; can set to False on cedar
 
 # Experiment 1: Train and test ConvGRU on Moving MNIST with 2M frames, 50000 steps, batch size 4
 train_mmnist_cgru:
@@ -49,7 +52,6 @@ train_mmnist_cgru:
   epochs: 25                            # 1 epoch is 2000 steps
   decODE: False
   load_model: False
-  frozen: True
 
   conv_encoder_out_ch: 64
   convgru_out_ch: 64
@@ -61,9 +63,8 @@ test_mmnist_cgru:
   model: "ConvGRU"
   phase: "test"
   load_model: True
-  step: 40000                       # load saved model params for which step
+  step: 50000                       # load saved model params for which step
   decODE: False
-  frozen: True
   
   conv_encoder_out_ch: 64
   convgru_out_ch: 64
@@ -78,7 +79,6 @@ train_mmnist_odecgru:
   phase: "train"
   epochs: 25                            # 1 epoch is 2000 steps
   load_model: False
-  frozen: True
 
   downsize: True                        # if True, conv_encoder will 0.5x and conv_decoder will 2x the resolution for every layer in `n_layers`
   conv_encoder_out_ch: 128              # output channels for conv encoder in models/ODEConvGRU.py
@@ -88,7 +88,7 @@ train_mmnist_odecgru:
   neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
   neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
   n_ode_layers: 2                       # n_layers for the convnet in ode_encoder_func and ode_decoder_func
-  decode_diff_method: 'dopri5'          # choices=['dopri5', 'euler', 'adams', 'rk4']
+  
   z_sample: False
 
 test_mmnist_odecgru:
@@ -108,11 +108,10 @@ test_mmnist_odecgru:
   neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
   neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
   n_ode_layers: 2                       # n_layers for the convnet in ode_encoder_func and ode_decoder_func
-  decode_diff_method: 'dopri5'          # choices=['dopri5', 'euler', 'adams', 'rk4']
   z_sample: False
 
 
-train_mmnist_sample_odecgru:      # Samples z0 from N(z_mu, z_sigma) instead of doing z0 = z_mu
+train_mmnist_sample_odecgru:      # (Not completed) Samples z0 from N(z_mu, z_sigma) instead of doing z0 = z_mu
   id: 'ODEConv_mmnist_train'
   model: "ODEConv"
   phase: "train"
@@ -127,17 +126,9 @@ train_mmnist_sample_odecgru:      # Samples z0 from N(z_mu, z_sigma) instead of 
   neural_ode_decoder_out_ch: 128  # output channels for ode_decoder_func in models/ODEConvGRU.py
   neural_ode_n_units: 64          # n_units for the convnet in ode_encoder_func and ode_decoder_func
   n_ode_layers: 2                 # n_layers for the convnet in ode_encoder_func and ode_decoder_func
-  decode_diff_method: 'dopri5'    # choices=['dopri5', 'euler', 'adams', 'rk4']
   z_sample: True
 
-  ckpt_save_freq: 20000
-  validate_freq: 20000
-  log_video_freq: 20000
-
-  in_channels: 1
-  num_digits: 3
-
-train_mmnist_cgrudecODE:
+train_mmnist_cgrudecODE:          # Not completed
   id: 'cgrudecODE_mmnist_train'            # actual id is id_inframes_outframes eg. ConvGRU_mmnist_train_30_70 if training or ConvGRU_mmnist_train_30_170 is testing
   model: "cgrudecODE"
   data_dir: "datasets/MovingMNIST"
