--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,71 @@
+absl-py==0.12.0
+astunparse==1.6.3
+attrs==21.2.0
 backcall==0.2.0
+cached-property==1.5.2
+cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
+click==8.0.0
 cloudpickle==1.6.0
 coloredlogs==15.0
+configparser==5.0.1
 cycler==0.10.0
 dataclasses==0.8
 decorator==4.4.2
 dill==0.3.3
+dm-tree==0.1.5
+docker-pycreds==0.4.0
+flatbuffers==1.12
 future==0.18.2
+gast==0.4.0
 getch==1.0
+gitdb==4.0.7
+GitPython==3.1.14
+google-auth==1.30.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.34.0
 gym==0.18.0
-h5py==2.10.0
+h5py==3.1.0
 hickle==4.0.4
 humanfriendly==9.1
 idna==2.10
 imageio==2.9.0
+importlib-metadata==4.4.0
+importlib-resources==5.1.2
 ipython==7.16.1
 ipython-genutils==0.2.0
 jedi==0.18.0
 joblib==1.0.1
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lxml==4.6.2
+Markdown==3.3.4
 matplotlib==3.0.3
 minerl==0.3.6
 networkx==2.5.1
 nose==1.3.7
 numpy==1.19.5
+oauthlib==3.1.1
 opencv-python==4.5.1.48
+opt-einsum==3.3.0
 parso==0.8.2
+pathtools==0.1.2
 pexpect==4.8.0
 phyre==0.2.1
 pickleshare==0.7.5
 Pillow==7.2.0
 Pillow-SIMD==7.0.0.post3
+promise==2.3
 prompt-toolkit==3.0.18
 protobuf==3.15.8
 psutil==5.8.0
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyglet==1.5.0
 Pygments==2.8.1
 pyparsing==2.4.7
@@ -45,11 +74,28 @@ python-dateutil==2.8.1
 PyWavelets==1.1.1
 PyYAML==5.3.1
 requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 scikit-image==0.17.2
 scipy==1.5.4
+sentry-sdk==0.19.5
 serpent==1.40
+shortuuid==1.0.1
 six==1.15.0
+smmap==4.0.0
+subprocess32==3.5.4
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
 tensorboardX==2.2
+tensorflow==2.5.0
+tensorflow-datasets==4.2.0
+tensorflow-estimator==2.5.0
+tensorflow-metadata==0.29.0
+tensorflow-probability==0.12.2
+termcolor==1.1.0
 thrift==0.13.0
 tifffile==2020.9.3
 torch==1.8.1
@@ -61,5 +107,10 @@ traitlets==4.3.3
 typing==3.7.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+wandb==0.10.13
+watchdog==0.10.4
 wcwidth==0.2.5
+Werkzeug==2.0.1
+wrapt==1.12.1
 yacs==0.1.8
+zipp==3.4.1
