--- a/configs.yaml
+++ b/configs.yaml
@@ -41,10 +41,26 @@ defaults:
 
   wandb_project: 'ODE-RL'
   wandb_entity: 'jithendaraa'
-  offline: True                         # Beluga does not have internet; can set to False on cedar
+  offline: False                         # Beluga does not have internet; can set to False on cedar
 
-experiemntal:
+experimental:
   off_wandb: True
+
+short_frames:
+  train_seq: 20
+  train_in_seq: 10
+  train_out_seq: 10
+  test_seq: 20
+  test_in_seq: 10
+  test_out_seq: 10
+
+long_frames:
+  train_seq: 100
+  train_in_seq: 50
+  train_out_seq: 50
+  test_seq: 200
+  test_in_seq: 150
+  test_out_seq: 50
 
 # Experiment 1: Train and test ConvGRU on Moving MNIST with 2M frames, 50000 steps, batch size 4
 train_mmnist_cgru:
@@ -53,7 +69,7 @@ train_mmnist_cgru:
   lr: 6e-4
 
   ckpt_save_freq: 2000
-  loss_log_freq: 100
+  loss_log_freq: 50
 
   train_seq: 20
   train_in_seq: 10
@@ -69,7 +85,7 @@ train_mmnist_cgru_depth3:
   lr: 6e-4
 
   ckpt_save_freq: 1000
-  loss_log_freq: 100
+  loss_log_freq: 50
 
   train_seq: 20
   train_in_seq: 10
@@ -88,7 +104,6 @@ test_mmnist_cgru:
   load_model: True
   step: 49000                       # load saved model params for which step
   
-
   train_seq: 20
   train_in_seq: 10
   train_out_seq: 10
@@ -127,34 +142,28 @@ test_mmnist_cgru_depth3:
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 # Experiment 2: Train and test ODEConvGRU on Moving MNIST with 50000 steps
 train_mmnist_odecgru:
   id: 'ODEConv_mmnist_train'
-  data_dir: "datasets/MovingMNIST_video/train"
   model: "ODEConv"
-  phase: "train"
-  epochs: 25                            # 1 epoch is 2000 steps
+  ckpt_id: 'train_mmnist_odecgru'
   load_model: False
+
+  ckpt_save_freq: 1000
+  loss_log_freq: 50
+  video_log_freq: 1000
+
+  train_seq: 20
+  train_in_seq: 10
+  train_out_seq: 10
+  test_seq: 20
+  test_in_seq: 10
+  test_out_seq: 10
 
   downsize: True                        # if True, conv_encoder will 0.5x and conv_decoder will 2x the resolution for every layer in `n_layers`
   conv_encoder_out_ch: 128              # output channels for conv encoder in models/ODEConvGRU.py
   conv_n_units: 64                      # n_units for conv encoder and conv decoder in models/ODEConvGRU.py
-  n_layers: 2                           # n_layers for conv encoder and conv decoder in models/ODEConvGRU.py
+  n_layers: 3                           # n_layers for conv encoder and conv decoder in models/ODEConvGRU.py
   neural_ode_encoder_out_ch: 128        # output channels for ode_encoder_func in models/ODEConvGRU.py
   neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
   neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
@@ -174,7 +183,7 @@ test_mmnist_odecgru:
   downsize: True                        # if True, conv_encoder will 0.5x and conv_decoder will 2x the resolution for every layer in `n_layers`
   conv_encoder_out_ch: 128              # output channels for conv encoder in models/ODEConvGRU.py
   conv_n_units: 64                      # n_units for conv encoder and conv decoder in models/ODEConvGRU.py
-  n_layers: 2                           # n_layers for conv encoder and conv decoder in models/ODEConvGRU.py
+  n_layers: 3                           # n_layers for conv encoder and conv decoder in models/ODEConvGRU.py
   neural_ode_encoder_out_ch: 128        # output channels for ode_encoder_func in models/ODEConvGRU.py
   neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
   neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
