--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -16,7 +16,7 @@ defaults:
   precision: 16
   debug: False
   expl_gifs: False
-  use_wandb: True
+  use_wandb: False
 
   # Environment
   task: 'dmc_walker_walk'
@@ -152,7 +152,7 @@ moving_mnist:
   task: 'MovingMNIST_0'
   steps: 50000
   dataset_size: 10000
-  video_data_dir: '.'
+  video_data_dir: '..'
   dyn_cell: 'gru_layer_norm'
   size: [64, 64]
   grayscale: True
